Aligned the navbar on responsive since it was changed from navbar-fixedtop

--- a/navbar.css
+++ b/navbar.css
@@ -275,6 +275,9 @@ visibility: hidden;
 }
 
 
+#navbarsettings{
+   margin-top: -1%;
+}
 }
 
 
